Update ui and fr.json

--- a/resources/js/lang/fr.json
+++ b/resources/js/lang/fr.json
@@ -39,7 +39,6 @@
   "about.team.title": "Notre équipe",
   "about.team.desc": "Passionnée, compétente et collaborative, notre équipe donne vie aux idées et fait avancer l'innovation.",
   "about.join.title": "Rejoignez notre communauté et commencez à collaborer dès aujourd'hui.",
-  
   "about.team.daniel.title": "Fondateur",
   "about.team.daniel.bio": "Daniel a une passion pour la science et la technologie. Il a commencé à programmer au collège et n'a cessé depuis de créer des projets et d'affiner ses compétences.",
   "about.team.laureen.title": "Responsable des Relations Exterieures",
@@ -54,7 +53,6 @@
   "about.team.bayedze.bio": "Bayédzè est un administrateur système fortement axé sur la sécurité des réseaux et la gestion des infrastructures. Il aime optimiser les systèmes et assurer des performances fiables.",
   "about.team.kallern.title": "Pentesteur",
   "about.team.kallern.bio": "Kallern est un passionné de cybersécurité, féru de hacking éthique et de sécurité numérique. Il affûte continuellement ses compétences pour protéger les systèmes contre les menaces émergentes.",
-
   "settings.profile.title": "Paramètres du profil",
   "settings.profile.desc": "Mettez à jour les informations personnelles de votre compte",
   "settings.password.title": "Paramètres du mot de passe",
@@ -64,7 +62,36 @@
   "appearance.light": "Clair",
   "appearance.dark": "Sombre",
   "appearance.system": "Système",
+  "blog.title": "Blog LOSLC",
   "blog.readmore": "Lire plus",
+  "blog.post.published_by": "Publié par",
+  "blog.post.comments": "Commentaire",
+  "blog.post.comments_plural": "Commentaires",
+  "blog.post.comments.replies": "Réponses",
   "common.select.language": "Sélectionner la langue",
-  "footer.copyright": "© 2025 LOSLC. Tous droits réservés."
+  "footer.copyright": "© 2025 LOSLC. Tous droits réservés.",
+  "nav.home": "Accueil",
+  "nav.about": "À propos",
+  "nav.blog": "Blog",
+  "nav.store": "Boutique",
+  "action.login": "Se connecter",
+  "action.register": "S'inscrire",
+  "action.theme.toggle": "Changer le thème",
+  "page.auth.login.title": "Se connecter",
+  "page.auth.login.subtitle": "Connectez-vous à votre compte.",
+  "page.auth.login.description": "Entrez votre e-mail et votre mot de passe ci-dessous pour vous connecter.",
+  "page.auth.login.form.email": "E-mail",
+  "page.auth.login.form.password": "Mot de passe",
+  "page.auth.login.form.password.forgot": "Mot de passe oublié ? ",
+  "page.auth.login.form.remember": "Se souvenir de moi",
+  "page.auth.login.question.register": "Pas encore de compte ? ",
+  "page.auth.register.title": "Créer un compte",
+  "page.auth.register.subtitle": "Créer un compte",
+  "page.auth.register.description": "Remplissez le formulaire ci-dessous pour créer un compte.",
+  "page.auth.register.form.name": "Nom",
+  "page.auth.register.form.name.placeholder": "Nom complet",
+  "page.auth.register.form.email": "E-mail",
+  "page.auth.register.form.password": "Mot de passe",
+  "page.auth.register.form.password_confirm": "Confirmer le mot de passe",
+  "page.auth.register.question.login": "Vous avez déjà un compte ? "
 }
