Update kallern profile and french language fil

--- a/resources/js/lang/fr.json
+++ b/resources/js/lang/fr.json
@@ -97,19 +97,19 @@
   "about.team.daniel.title": "Fondateur",
   "about.team.daniel.bio": "Daniel est passionné par la science et la technologie. Il a commencé à programmer au collège et développe depuis de nombreux projets pour affiner ses compétences.",
   
-  "about.team.bayedze.title": "Responsable Communautaire",
+  "about.team.bayedze.title": "Community Manager",
   "about.team.bayedze.bio": "Bayédzè est administrateur système spécialisé en sécurité réseau et gestion d'infrastructure. Il aime optimiser les systèmes et garantir leur fiabilité.",
   
   "about.team.denise.title": "Secrétaire",
   "about.team.denise.bio": "Denise est développeuse web full-stack, créant des applications web dynamiques, réactives et performantes. Elle aime résoudre des problèmes et explorer de nouvelles technologies pour améliorer l'expérience utilisateur.",
   
-  "about.team.emerick.title": "Responsable Communautaire",
+  "about.team.emerick.title": "Community Manager",
   "about.team.emerick.bio": "Emerick est spécialiste en cybersécurité et fondateur de la communauté ETHIX. Joueur de CTF, créateur de challenges et pentester freelance junior, il progresse activement dans le domaine.",
   
   "about.team.kallern.title": "Pentester",
   "about.team.kallern.bio": "Kallern est un passionné de cybersécurité spécialisé dans le hacking éthique et la protection des systèmes contre les nouvelles menaces.",
   
-  "about.team.laureen.title": "Responsable des relations communautaires",
+  "about.team.laureen.title": "Responsable des relations externes",
   "about.team.laureen.bio": "Laureen est passionnée par l'open-source et la robotique. Elle contribue à des projets innovants et aime collaborer avec la communauté tech pour rester à la pointe des nouvelles technologies.",
   
   "about.team.rayane.title": "Responsable communication",
