--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -53,7 +53,7 @@
   "hello_world": "hello world",
 
   "home.join.btn": "Join Us",
-  "home.subtitle": "LOSLC is a tech community for open-source enthusiasts and Linux lovers. A place where we build and share innovative ideas.",
+  "home.subtitle": "is a tech community for open-source enthusiasts and Linux lovers. A place where we build and share innovative ideas.",
   "home.title": "LOSLC, Linux and Open Source Lovers Community.",
 
   "landing.event.iy2l": "Join us every Thursday at 8PM UTC for Inside Your Linux Lab (IY2L), where we dive deep into your Linux universe.",
