--- a/resources/js/lang/fr.json
+++ b/resources/js/lang/fr.json
@@ -77,7 +77,7 @@
   "footer.copyright": "© 2025 LOSLC. Tous droits réservés.",
 
   "home.title": "LOSLC, Communauté des Amateurs de Linux et d'Open Source.",
-  "home.subtitle": "LOSLC est une communauté tech pour les passionnés d'open source et les amateurs de Linux. Un endroit où nous construisons et partageons des idées innovantes.",
+  "home.subtitle": "est une communauté tech pour les passionnés d'open source et les amateurs de Linux. Un endroit où nous construisons et partageons des idées innovantes.",
   "home.join.btn": "Rejoignez-nous",
 
   "about.title": "Une communauté pour les passionnés d'open-source et les amateurs de Linux.",
