--- a/resources/js/lang/fr.json
+++ b/resources/js/lang/fr.json
@@ -26,6 +26,7 @@
 
   "system.language.choose.title": "Choisissez votre langue",
   "system.language.choose.btn": "Choisir",
+  "system.language.selected": "Langue choisie",
 
   "field.password": "Mot de passe",
 
